--- a/app/assets/stylesheets/chores.scss
+++ b/app/assets/stylesheets/chores.scss
@@ -2,13 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.chores-container {
-  @include span-columns(6);
-  padding: 1rem;
-  border-radius: $card-border-radius;
-  background-color: $card-background-color;
-}
-
 .chore-info {
   padding: 0;
   margin-top: 0;
