--- a/app/assets/stylesheets/expenses.scss
+++ b/app/assets/stylesheets/expenses.scss
@@ -31,7 +31,7 @@
 }
 
 .expenses-purchases-container {
-  @include span-columns(6);
+  
 }
 
 .expense-item {
